Removing the contact form until validation is done.

--- a/index.html
+++ b/index.html
@@ -1,100 +1,114 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Ameya Athalye | Portfolio</title>
-        <link rel="icon" type="image/png" href="images/aa-logo.png">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:100,300">
-        <link rel="stylesheet" type="text/css" href="styles/normalize.css">
-        <link rel="stylesheet" type="text/css" href="styles/main.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    </head>
-    <body class="landing">
-        <div class="bodyContainer">
-            <nav class="aa-navbar">
-                <div id="aa-headerImg" class="aa-headerImg"><a href="index.html"><img src="./images/aa-logo275X110.png" height="80"/></a></div>
-                <div id="aa-headerInfo" class="aa-headerInfo">
-                    <ul class="aa-navLinks">
-                      <li><a href="index.html">Home</a></li>
-                      <li><a href="work.html">Work</a></li>
-                      <li><a href="resume.html">Resume</a></li>
-                      <li><a href="playground.html">Playground</a></li>
-                      <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
-            </nav>
-            <div class="content">
-                <div id="myInfo"> <!-- Intro para content -->
-                    I'm Ameya Athalye.<br />
-                    I live, and <a href="#" id="play" class="myInfo">study</a> in <span class="">San Francisco</span>.<br />
-                    I <a href="resume.html" id="work" class="">work</a> in <span class="">East Bay</span>.
-                    I <a href="https://github.com/ameya1727" target="_blank" class="">code</a>, <a href="http://ameya1727.blogspot.com/" target="_blank" id="" class="">write</a>, and post <a href="#" id="pictures" class="">pictures</a> here.
-                    <p>The purpose of this website is to showcase what I've learnt and keep adding new stuff.</p><p> Please feel free to click around and contact me.</p>
-            </div>      
-            <div> <!-- selling points -->
+
+<head>
+    <title>Ameya Athalye | Portfolio</title>
+    <link rel="icon" type="image/png" href="images/aa-logo.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:100,300">
+    <link rel="stylesheet" type="text/css" href="styles/normalize.css">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+</head>
+
+<body class="landing">
+    <div class="bodyContainer">
+        <nav class="aa-navbar">
+            <div id="aa-headerImg" class="aa-headerImg">
+                <a href="index.html"><img src="./images/aa-logo275X110.png" height="80" /></a>
+            </div>
+            <div id="aa-headerInfo" class="aa-headerInfo">
+                <ul class="aa-navLinks">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="work.html">Work</a></li>
+                    <li><a href="resume.html">Resume</a></li>
+                    <li><a href="playground.html">Playground</a></li>
+                    <!-- <li><a href="contact.html">Contact</a></li> -->
+                </ul>
+            </div>
+        </nav>
+        <div class="content">
+            <div id="myInfo">
+                <!-- Intro para content -->
+                I'm Ameya Athalye.<br /> I live, and <a href="#" id="play" class="myInfo">study</a> in <span class="">San Francisco</span>.<br /> I <a href="resume.html" id="work" class="">work</a> in <span class="">East Bay</span>. I <a href="https://github.com/ameya1727"
+                    target="_blank" class="">code</a>, <a href="http://ameya1727.blogspot.com/" target="_blank" id="" class="">write</a>, and post <a href="#" id="pictures" class="">pictures</a> here.
+                <p>The purpose of this website is to showcase what I've learnt and keep adding new stuff.</p>
+                <p> Please feel free to click around and contact me.</p>
+            </div>
+            <div>
+                <!-- selling points -->
                 <div id="play" class="details">
-                        <div class="about-title">Education</div>
+                    <div class="about-title">Education</div>
+                    <div class="about-text">
+                        <ul>
+                            <li>Master’s in Computer Science at San Francisco State University (July 2011)</li>
+                            <li>Bachelors in Computer Engineering at Mumbai University (June 2007)</li>
+                        </ul>
+                        <h1></h1>
+                    </div>
+                    <div class="left">
+                        <div class="about-title">“Stats”</div>
                         <div class="about-text">
                             <ul>
-                                <li>Master’s in Computer Science at San Francisco State University (July 2011)</li>
-                                <li>Bachelors in Computer Engineering at Mumbai University (June 2007)</li>
+                                <li>A Project Participation Meter</li>
+                                <li>“Stats” is a web application designed to help managers/professors in monitoring team participation in a project or individual contribution in a team.</li>
+                                <li>Designed and developed the front end and helped users to store the data, results into MS Excel sheets.</li>
+                                <li>Checked commits, forum posts and mailing lists to discover the participation of each member</li>
+                                <li>PHP, MySQL, HTML, CSS, Google Charts API</li>
                             </ul>
-                        <h1></h1>
                         </div>
-                        <div class="left">
-                            <div class="about-title">“Stats”</div>
-                            <div class="about-text">
-                                <ul>
-                                    <li>A Project Participation Meter</li>
-                                    <li>“Stats” is a web application designed to help managers/professors in monitoring team participation in a project or individual contribution in a team.</li>
-                                    <li>Designed and developed the front end and helped users to store the data, results into MS Excel sheets.</li>
-                                    <li>Checked commits, forum posts and mailing lists to discover the participation of each member</li>
-                                    <li>PHP, MySQL, HTML, CSS, Google Charts API</li>
-                                </ul>
-                            </div>
+                    </div>
+                    <div class="left">
+                        <div class="about-title">“DeBugger”</div>
+                        <div class="about-text">
+                            <ul>
+                                <li>An Educational Multiplayer Online Game for Students at SFSU</li>
+                                <li>DeBugger allows students to fight the 'computer bugs' by answering Java questions to advance in the game, also customizing avatar, socialize and become a part of a virtual, educational community of other students.</li>
+                                <li>Tested server scalability using Amazon EC2 cloud. Testing was conducted with generating maximum of 100 client instances and running them concurrently.</li>
+                                <li>Developed a few features of the game along with 3d character modeling.</li>
+                                <li>Python, Java, MySQL, Panda3D as game engine, Blender</li>
+                            </ul>
                         </div>
-                        <div class="left">
-                            <div class="about-title">“DeBugger”</div>
-                            <div class="about-text">
-                                <ul>
-                                    <li>An Educational Multiplayer Online Game for Students at SFSU</li>
-                                    <li>DeBugger allows students to fight the 'computer bugs' by answering Java questions to advance in the game, also customizing avatar, socialize and become a part of a virtual, educational community of other students.</li>
-                                    <li>Tested server scalability using Amazon EC2 cloud. Testing was conducted with generating maximum of 100 client instances and running them concurrently.</li>
-                                    <li>Developed a few features of the game along with 3d character modeling.</li>
-                                    <li>Python, Java, MySQL, Panda3D as game engine, Blender</li>
-                                </ul>
-                            </div>
+                    </div>
+                    <div class="left">
+                        <div class="about-title">“Netflix Prize”</div>
+                        <div class="about-text">
+                            <ul>
+                                <li>A Data mining class project</li>
+                                <li>The project was to substantially improve the accuracy of predictions for a user to like a movie based on his/her movie preferences.</li>
+                                <li>Used Naïve Bayes algorithm in order to perform the data mining on the training and test dataset with more than 17,000 records provided by Netflix.</li>
+                                <li>Java</li>
+                            </ul>
                         </div>
-                        <div class="left">
-                            <div class="about-title">“Netflix Prize”</div>
-                            <div class="about-text">
-                                <ul>
-                                    <li>A Data mining class project</li>
-                                    <li>The project was to substantially improve the accuracy of predictions for a user to like a movie based on his/her movie preferences.</li>
-                                    <li>Used Naïve Bayes algorithm in order to perform the data mining on the training and test dataset with more than 17,000 records provided by Netflix.</li>
-                                    <li>Java</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <!--  then magic trick comes here  -->
-                        <br style="clear: left;" />
+                    </div>
+                    <!--  then magic trick comes here  -->
+                    <br style="clear: left;" />
                 </div>
             </div>
+        </div>
+    </div>
+    <footer>
+        <div class="social-icons">
+            <div id="social">
+                <ul>
+                    <li>
+                        <a href="https://twitter.com/ameya1727" target="_blank"><img src='images/twitter-logo.png' /></a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/ameya1727" target="_blank"><img src='images/github-logo.png' /></a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/ameya1727" target="_blank"><img src='images/facebook-logo.png' /></a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/ameyaathalye" target="_blank"><img src='images/linkedin-logo.png' /></a>
+                    </li>
+                </ul>
+                <div class="base"></div>
             </div>
         </div>
-        <footer>
-            <div class="social-icons">
-                  <div id="social">
-                      <ul>
-                          <li><a href="https://twitter.com/ameya1727" target="_blank"><img src='images/twitter-logo.png' /></a></li>
-                          <li><a href="https://github.com/ameya1727" target="_blank"><img src='images/github-logo.png' /></a></li>
-                          <li><a href="https://www.facebook.com/ameya1727" target="_blank"><img src='images/facebook-logo.png' /></a></li>
-                          <li><a href="https://www.linkedin.com/in/ameyaathalye" target="_blank"><img src='images/linkedin-logo.png' /></a></li>
-                      </ul>
-                  <div class="base"></div>
-                  </div>
-            </div>
-        </footer>
-        <script src="scripts/main.js"></script>
-    </body>
+    </footer>
+    <script src="scripts/main.js"></script>
+</body>
+
 </html>
