--- a/resume.html
+++ b/resume.html
@@ -1,128 +1,144 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Ameya Athalye | Portfolio</title>
-        <link rel="icon" type="image/png" href="images/aa-logo.png">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:100,300">
-        <link rel="stylesheet" type="text/css" href="styles/normalize.css">
-        <link rel="stylesheet" type="text/css" href="styles/main.css">
-        <link rel="stylesheet" type="text/css" href="styles/resume.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    </head>
-    <body class="landing">
-        <div class="bodyContainer">
-            <nav class="aa-navbar">
-                <div id="aa-headerImg" class="aa-headerImg"><a href="index.html"><img src="./images/aa-logo275X110.png" height="80"/></a></div>
-                <div id="aa-headerInfo" class="aa-headerInfo">
-                    <ul class="aa-navLinks">
-                      <li><a href="index.html">Home</a></li>
-                      <li><a href="work.html">Work</a></li>
-                      <li><a href="resume.html">Resume</a></li>
-                      <li><a href="playground.html">Playground</a></li>
-                      <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
-            </nav>
-            <div class="content">
-                <div class="contactContainer"> <!-- selling points -->
-                    <div id="leftBar" class="leftBar">
-                        <div id="lIntro" class="lIntro">
-                            <h2>Summary</h2>
-                            <p>Front end developer with 6 years of collective experience with HTML, CSS, JavaScript, Drupal and Git</p> 
-                        </div>
-                        <div id="lContact" class="lContact">
-                            <h2>Contact</h2>
-                            <p><strong>Email: </strong><a href="mailto:ameyaa.athalye@gmail.com">ameyaa.athalye@gmail.com</a></p>
-                            <hr>
-                            <p><strong>Proficient in: </strong>HTML, CSS, JavaScript, Git</p>
-                            <p><strong>Good at: </strong>HTML5, React, Drupal, Sketch, Photoshop</p>
-                            <hr>
-                            <p><strong>Education: </strong></p>
-                            <ul>
-                                <li>Masters in Computer Science at San Francisco State University (July 2011)</li>
-                                <li>Bachelors in Computer Engineering at Mumbai University (May 2007)</li>
-                            </ul>
-                        </div>
+
+<head>
+    <title>Ameya Athalye | Portfolio</title>
+    <link rel="icon" type="image/png" href="images/aa-logo.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:100,300">
+    <link rel="stylesheet" type="text/css" href="styles/normalize.css">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <link rel="stylesheet" type="text/css" href="styles/resume.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+</head>
+
+<body class="landing">
+    <div class="bodyContainer">
+        <nav class="aa-navbar">
+            <div id="aa-headerImg" class="aa-headerImg">
+                <a href="index.html"><img src="./images/aa-logo275X110.png" height="80" /></a>
+            </div>
+            <div id="aa-headerInfo" class="aa-headerInfo">
+                <ul class="aa-navLinks">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="work.html">Work</a></li>
+                    <li><a href="resume.html">Resume</a></li>
+                    <li><a href="playground.html">Playground</a></li>
+                    <!-- <li><a href="contact.html">Contact</a></li> -->
+                </ul>
+            </div>
+        </nav>
+        <div class="content">
+            <div class="contactContainer">
+                <!-- selling points -->
+                <div id="leftBar" class="leftBar">
+                    <div id="lIntro" class="lIntro">
+                        <h2>Summary</h2>
+                        <p>Front end developer with 6 years of collective experience with HTML, CSS, JavaScript, Drupal and Git</p>
                     </div>
-                    <div id="rightBar" class="rightBar">
-                        <div id="rExperience" class="rExperience">
-                            <h2>Experience</h2>
-                            <h3>Front End Developer at CooperVision Inc. (PHP, HTML, CSS, JavaScript, Drupal) [2012-Present]</h3>
-                            <p>Responsibilities:</p>
-                            <ul>
-                                <li>Developing and maintaining responsive CooperVision websites globally in Drupal 7. We have launched 39 sites as of July 2018.</li>
-                                <li>Creating Drupal 7 modules, editing themes and content population for the websites</li>
-                                <li>Modifying the code and developing in PHP, Developing JavaScript effects using JQuery</li>
-                                <li>Creating How to guides for internal CooperVision users and training the team on how to use Drupal</li>
-                                <li>Extensive testing of websites and Infographics across all major browsers and mobiles</li>
-                                <li>Creating table-less layouts from PSD files, word documents and/or other files for various campaigns adhering to best practice coding standards</li>
-                            </ul>
-                            <p>Highlights:</p>
-                            <ul>
-                                <li>Acting as a main point of contact for the dev agency to maintain the website bug cycles and practitioner locators on the CooperVision websites</li>
-                                <li>Managing global social media accounts in absence of a digital social media manager for over 10 months and data migration from Oracle to Salesforce Social Studio. Created new topic profiles and generating monthly reports to track progress in Social Studio</li>
-                            </ul>
-                            <p>Notable projects:</p>
-                            <ul>
-                                <li>Consumer and practitioner website population (each website populated in under a week with over 150 pages and different languages) with detailed testing on desktop and mobile.</li>
-                                <li>Built responsive email templates for automated patient communication system - WebSystem3</li>
-                                <li>Created custom modules for CV websites. Some examples include - track consumers visiting the ‘.com’ site from outside of the USA and direct them to their respective country site, EU cookie compliance module, custom widgets for WYSIWYG and search filters within admin content</li>
-                                <li>Currently working on a project to evaluate and modify CooperVision’s keyword and SEO strategy</li>
-                            </ul>
-                            <hr>
-                            <h3>Intern Web Developer at Zen Den Web Design (HTML, CSS, JavaScript, WordPress) [2011-2012]</h3>
-                            <ul>
-                                <li>Assisted an agile team of experienced web designers to provide the essential services to launch and maintain a powerful online presence</li>
-                                <li>Developed new microsites for Putnam's extended warranty purchase process for old cars using PHP</li>
-                                <li>Built forms, features on 3 website projects and worked on shopping cart applications in WordPress</li>
-                            </ul>
-                            <hr>
-                            <h3>Web Developer at Temple Baptist Church (volunteer) (PHP, HTML, CSS, JavaScript) [2011-2012]</h3>
-                            <ul>
-                                <li>Built a new website and added their existing content and weekly sermon files</li>
-                                <li>Hosted the website with their preferred hosting service and maintained the website by adding sermon audios, event information, pictures, mission trips information and testimonies</li>
-                            </ul>
-                        </div>
-                        <div id="rProjects" class="rProjects">
-                            <h2>Projects</h2>
-                            <h3>“Stats: Project Participation Meter” (PHP, MySQL, HTML, CSS, Google Charts API)</h3>
-                            <ul>
-                                <li>“Stats” is a web application designed to help managers/professors in monitoring team participation in a project or individual contribution in a team</li>
-                                <li>Designed and developed the front end and helped users to store the data, results into MS Excel sheets</li>
-                                <li>Checked commits, forum posts and mailing lists to discover the participation of each member</li>
-                            </ul>
-                            <hr>
-                            <h3>“DeBugger” – Educational Multiplayer Online Game for Students at SFSU (Python, Java, MySQL, Panda3D as game engine, Blender)</h3>
-                            <ul>
-                                <li>DeBugger allows students to fight the 'computer bugs' by answering Java questions to advance in the game, also customizing avatar, socialize and become a part of a virtual, educational community of other students</li>
-                                <li>Tested server scalability using Amazon EC2 cloud. Testing was conducted with generating maximum of 100 client instances and running them concurrently</li>
-                                <li>Developed a few features of the game along with 3d character modeling</li>
-                            </ul>
-                            <hr>
-                            <h3>“Netflix Prize”- Data mining class (Java)</h3>
-                            <ul>
-                                <li>The project was to substantially improve the accuracy of predictions for a user to like a movie based on his/her movie preferences</li>
-                                <li>Used Naïve Bayes algorithm in order to perform the data mining on the training and test dataset with more than 17,000 records provided by Netflix</li>
-                            </ul>
-                        </div> 
+                    <div id="lContact" class="lContact">
+                        <h2>Contact</h2>
+                        <p><strong>Email: </strong><a href="mailto:ameyaa.athalye@gmail.com">ameyaa.athalye@gmail.com</a></p>
+                        <hr>
+                        <p><strong>Proficient in: </strong>HTML, CSS, JavaScript, Git</p>
+                        <p><strong>Good at: </strong>HTML5, React, Drupal, Sketch, Photoshop</p>
+                        <hr>
+                        <p><strong>Education: </strong></p>
+                        <ul>
+                            <li>Masters in Computer Science at San Francisco State University (July 2011)</li>
+                            <li>Bachelors in Computer Engineering at Mumbai University (May 2007)</li>
+                        </ul>
+                    </div>
+                </div>
+                <div id="rightBar" class="rightBar">
+                    <div id="rExperience" class="rExperience">
+                        <h2>Experience</h2>
+                        <h3>Front End Developer at CooperVision Inc. (PHP, HTML, CSS, JavaScript, Drupal) [2012-Present]</h3>
+                        <p>Responsibilities:</p>
+                        <ul>
+                            <li>Developing and maintaining responsive CooperVision websites globally in Drupal 7. We have launched 39 sites as of July 2018.</li>
+                            <li>Creating Drupal 7 modules, editing themes and content population for the websites</li>
+                            <li>Modifying the code and developing in PHP, Developing JavaScript effects using JQuery</li>
+                            <li>Creating How to guides for internal CooperVision users and training the team on how to use Drupal</li>
+                            <li>Extensive testing of websites and Infographics across all major browsers and mobiles</li>
+                            <li>Creating table-less layouts from PSD files, word documents and/or other files for various campaigns adhering to best practice coding standards</li>
+                        </ul>
+                        <p>Highlights:</p>
+                        <ul>
+                            <li>Acting as a main point of contact for the dev agency to maintain the website bug cycles and practitioner locators on the CooperVision websites</li>
+                            <li>Managing global social media accounts in absence of a digital social media manager for over 10 months and data migration from Oracle to Salesforce Social Studio. Created new topic profiles and generating monthly reports to
+                                track progress in Social Studio</li>
+                        </ul>
+                        <p>Notable projects:</p>
+                        <ul>
+                            <li>Consumer and practitioner website population (each website populated in under a week with over 150 pages and different languages) with detailed testing on desktop and mobile.</li>
+                            <li>Built responsive email templates for automated patient communication system - WebSystem3</li>
+                            <li>Created custom modules for CV websites. Some examples include - track consumers visiting the ‘.com’ site from outside of the USA and direct them to their respective country site, EU cookie compliance module, custom widgets
+                                for WYSIWYG and search filters within admin content</li>
+                            <li>Currently working on a project to evaluate and modify CooperVision’s keyword and SEO strategy</li>
+                        </ul>
+                        <hr>
+                        <h3>Intern Web Developer at Zen Den Web Design (HTML, CSS, JavaScript, WordPress) [2011-2012]</h3>
+                        <ul>
+                            <li>Assisted an agile team of experienced web designers to provide the essential services to launch and maintain a powerful online presence</li>
+                            <li>Developed new microsites for Putnam's extended warranty purchase process for old cars using PHP</li>
+                            <li>Built forms, features on 3 website projects and worked on shopping cart applications in WordPress</li>
+                        </ul>
+                        <hr>
+                        <h3>Web Developer at Temple Baptist Church (volunteer) (PHP, HTML, CSS, JavaScript) [2011-2012]</h3>
+                        <ul>
+                            <li>Built a new website and added their existing content and weekly sermon files</li>
+                            <li>Hosted the website with their preferred hosting service and maintained the website by adding sermon audios, event information, pictures, mission trips information and testimonies</li>
+                        </ul>
+                    </div>
+                    <div id="rProjects" class="rProjects">
+                        <h2>Projects</h2>
+                        <h3>“Stats: Project Participation Meter” (PHP, MySQL, HTML, CSS, Google Charts API)</h3>
+                        <ul>
+                            <li>“Stats” is a web application designed to help managers/professors in monitoring team participation in a project or individual contribution in a team</li>
+                            <li>Designed and developed the front end and helped users to store the data, results into MS Excel sheets</li>
+                            <li>Checked commits, forum posts and mailing lists to discover the participation of each member</li>
+                        </ul>
+                        <hr>
+                        <h3>“DeBugger” – Educational Multiplayer Online Game for Students at SFSU (Python, Java, MySQL, Panda3D as game engine, Blender)</h3>
+                        <ul>
+                            <li>DeBugger allows students to fight the 'computer bugs' by answering Java questions to advance in the game, also customizing avatar, socialize and become a part of a virtual, educational community of other students</li>
+                            <li>Tested server scalability using Amazon EC2 cloud. Testing was conducted with generating maximum of 100 client instances and running them concurrently</li>
+                            <li>Developed a few features of the game along with 3d character modeling</li>
+                        </ul>
+                        <hr>
+                        <h3>“Netflix Prize”- Data mining class (Java)</h3>
+                        <ul>
+                            <li>The project was to substantially improve the accuracy of predictions for a user to like a movie based on his/her movie preferences</li>
+                            <li>Used Naïve Bayes algorithm in order to perform the data mining on the training and test dataset with more than 17,000 records provided by Netflix</li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
-        <footer>
-            <div class="social-icons">
-                  <div id="social">
-                      <ul>
-                          <li><a href="https://twitter.com/ameya1727" target="_blank"><img src='images/twitter-logo.png' /></a></li>
-                          <li><a href="https://github.com/ameya1727" target="_blank"><img src='images/github-logo.png' /></a></li>
-                          <li><a href="https://www.facebook.com/ameya1727" target="_blank"><img src='images/facebook-logo.png' /></a></li>
-                          <li><a href="https://www.linkedin.com/in/ameyaathalye" target="_blank"><img src='images/linkedin-logo.png' /></a></li>
-                      </ul>
-                  <div class="base"></div>
-                  </div>
+    </div>
+    <footer>
+        <div class="social-icons">
+            <div id="social">
+                <ul>
+                    <li>
+                        <a href="https://twitter.com/ameya1727" target="_blank"><img src='images/twitter-logo.png' /></a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/ameya1727" target="_blank"><img src='images/github-logo.png' /></a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/ameya1727" target="_blank"><img src='images/facebook-logo.png' /></a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/ameyaathalye" target="_blank"><img src='images/linkedin-logo.png' /></a>
+                    </li>
+                </ul>
+                <div class="base"></div>
             </div>
-        </footer>
-        <script src="scripts/main.js"></script>
-    </body>
+        </div>
+    </footer>
+    <script src="scripts/main.js"></script>
+</body>
+
 </html>
