adding one javascript play.

--- a/playground.html
+++ b/playground.html
@@ -34,7 +34,7 @@
             </p>
         </div>
         <div class="flexContainer">
-            <div id="main" class="taskListForm formBox formBoxBody">
+            <div id="leftDiv" class="leftDiv taskListForm formBox formBoxBody">
                 <h2 class="title">Playing with the DOM</h2>
                 <p>Add, delete, search items.</p>
                 <div class="">
@@ -52,8 +52,11 @@
                     <li class="list-group-item">Item 4 <button class="btn btn-danger btn-sm float-right delete">X</button></li>
                 </ul>
             </div>
-            <div>Panel 2</div>
-            <div>Panel 3</div>
+            <div id="middleDiv" class="middleDiv"></div>
+            <div id="rightDiv" class="rightDiv">
+                If you mouseover into this window the background will keep changing.
+                <div id="colorChangeOutput"></div>
+            </div>
         </div>
     </div>
     <footer>
