updating the text in the right div.

--- a/playground.html
+++ b/playground.html
@@ -54,7 +54,7 @@
             </div>
             <div id="middleDiv" class="middleDiv"></div>
             <div id="rightDiv" class="rightDiv">
-                If you mouseover into this window the background will keep changing.
+                If you mouseover into this window the background will keep changing. As soon as you leave this div, the background will be light grey again.
                 <div id="colorChangeOutput"></div>
             </div>
         </div>
