Updated page text.

--- a/playground.html
+++ b/playground.html
@@ -30,8 +30,8 @@
             </div>
         </nav>
         <div class="playground-text">
-            <p>This page has some of the personal learning projects that I created learning JavaScript, jQuery and CSS.
-            </p>
+            <h2>This page has some learning projects that I'm working on as I learn JavaScript, jQuery and CSS.
+            </h2>
         </div>
         <div class="flexContainer">
             <div id="leftDiv" class="leftDiv taskListForm formBox formBoxBody">
