--- a/index.html
+++ b/index.html
@@ -1,38 +1,47 @@
-<!DOCTYPE html>
-<html>
-
+<!doctype html>
+<html lang="en">
 <head>
-    <title>Ameya Athalye | Portfolio</title>
-    <link rel="icon" type="image/png" href="images/aa-logo.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:100,300">
-    <link rel="stylesheet" type="text/css" href="styles/normalize.css">
-    <link rel="stylesheet" type="text/css" href="styles/main.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<!-- Required meta tags -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+<link rel="icon" type="image/png" href="images/aa-logo.png">
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:100,300">
+<link rel="stylesheet" type="text/css" href="styles/normalize.css">
+<!-- Bootstrap CSS -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="styles/main.css">
+
+<title>Ameya Athalye | Portfolio</title>
 </head>
 
 <body class="landing">
+    <nav class="nav navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="index.html"><img src="./images/aa-logo275X110.png" height="80" /></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+            <ul class="nav flex-column flex-sm-row">
+                <li class="nav-item">
+                    <a class="nav-link active" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="resume.html">Resume</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="playground.html">Learning</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <div class="bodyContainer">
-        <nav class="aa-navbar">
-            <div id="aa-headerImg" class="aa-headerImg">
-                <a href="index.html"><img src="./images/aa-logo275X110.png" height="80" /></a>
-            </div>
-            <div id="aa-headerInfo" class="aa-headerInfo">
-                <ul class="aa-navLinks">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="work.html">Work</a></li>
-                    <li><a href="resume.html">Resume</a></li>
-                    <li><a href="playground.html">Playground</a></li>
-                    <!-- <li><a href="contact.html">Contact</a></li> -->
-                </ul>
-            </div>
-        </nav>
         <div class="content">
             <div id="myInfo">
                 <!-- Intro para content -->
-                I'm Ameya Athalye.<br /> I live, and <a href="#" id="play" class="myInfo">study</a> in <span class="">San Francisco</span>.<br /> I <a href="resume.html" id="work" class="">work</a> in <span class="">East Bay</span>. I <a href="https://github.com/ameya1727"
-                    target="_blank" class="">code</a>, <a href="http://ameya1727.blogspot.com/" target="_blank" id="" class="">write</a>, and post <a href="#" id="pictures" class="">pictures</a> here.
-                <p>The purpose of this website is to showcase what I've learnt and keep adding new stuff.</p>
+                <p>I'm Ameya Athalye.</p><p>I lived, and <a href="#" id="play" class="myInfo">studied</a> in <span class="">San Francisco</span>. I <a href="https://github.com/ameya1727"
+                    target="_blank" class="">code</a>, <a href="http://ameya1727.blogspot.com/" target="_blank" id="" class="">write</a>, and post <a href="index.html" id="pictures" class="">pictures</a> here.</p>
+                <p>This website is my playground to apply what I've learnt and keep adding new stuff.</p>
                 <p> Please feel free to click around and contact me.</p>
             </div>
             <div>
@@ -108,6 +117,11 @@
             </div>
         </div>
     </footer>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="scripts/main.js"></script>
 </body>
 
